// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-usage reports on files in nested directories 1`] = `
Object {
  "name": "Droid",
}
`;

exports[`graphql-usage reports on files in nested directories 2`] = `
Object {
  "name": "appearsIn",
  "parentType": "Droid",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage reports on files in nested directories 3`] = `
Object {
  "name": "friends",
  "parentType": "Droid",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on files in nested directories 4`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Droid",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage reports on files in nested directories 5`] = `
Object {
  "name": "id",
  "parentType": "Droid",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on files in nested directories 6`] = `
Object {
  "name": "name",
  "parentType": "Droid",
  "type": "String!",
}
`;

exports[`graphql-usage reports on files in nested directories 7`] = `
Object {
  "name": "primaryFunction",
  "parentType": "Droid",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 8`] = `
Object {
  "name": "FriendsConnection",
}
`;

exports[`graphql-usage reports on files in nested directories 9`] = `
Object {
  "name": "edges",
  "parentType": "FriendsConnection",
  "type": "[FriendsEdge]",
}
`;

exports[`graphql-usage reports on files in nested directories 10`] = `
Object {
  "name": "friends",
  "parentType": "FriendsConnection",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on files in nested directories 11`] = `
Object {
  "name": "pageInfo",
  "parentType": "FriendsConnection",
  "type": "PageInfo!",
}
`;

exports[`graphql-usage reports on files in nested directories 12`] = `
Object {
  "name": "totalCount",
  "parentType": "FriendsConnection",
  "type": "Int",
}
`;

exports[`graphql-usage reports on files in nested directories 13`] = `
Object {
  "name": "FriendsEdge",
}
`;

exports[`graphql-usage reports on files in nested directories 14`] = `
Object {
  "name": "cursor",
  "parentType": "FriendsEdge",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on files in nested directories 15`] = `
Object {
  "name": "node",
  "parentType": "FriendsEdge",
  "type": "Character",
}
`;

exports[`graphql-usage reports on files in nested directories 16`] = `
Object {
  "name": "Human",
}
`;

exports[`graphql-usage reports on files in nested directories 17`] = `
Object {
  "name": "appearsIn",
  "parentType": "Human",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage reports on files in nested directories 18`] = `
Object {
  "name": "friends",
  "parentType": "Human",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on files in nested directories 19`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Human",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage reports on files in nested directories 20`] = `
Object {
  "name": "height",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage reports on files in nested directories 21`] = `
Object {
  "name": "homePlanet",
  "parentType": "Human",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 22`] = `
Object {
  "name": "id",
  "parentType": "Human",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on files in nested directories 23`] = `
Object {
  "name": "mass",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage reports on files in nested directories 24`] = `
Object {
  "name": "name",
  "parentType": "Human",
  "type": "String!",
}
`;

exports[`graphql-usage reports on files in nested directories 25`] = `
Object {
  "name": "starships",
  "parentType": "Human",
  "type": "[Starship]",
}
`;

exports[`graphql-usage reports on files in nested directories 26`] = `
Object {
  "name": "Mutation",
}
`;

exports[`graphql-usage reports on files in nested directories 27`] = `
Object {
  "name": "createReview",
  "parentType": "Mutation",
  "type": "Review",
}
`;

exports[`graphql-usage reports on files in nested directories 28`] = `
Object {
  "name": "PageInfo",
}
`;

exports[`graphql-usage reports on files in nested directories 29`] = `
Object {
  "name": "endCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage reports on files in nested directories 30`] = `
Object {
  "name": "hasNextPage",
  "parentType": "PageInfo",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on files in nested directories 31`] = `
Object {
  "name": "startCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage reports on files in nested directories 32`] = `
Object {
  "name": "Query",
}
`;

exports[`graphql-usage reports on files in nested directories 33`] = `
Object {
  "name": "character",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage reports on files in nested directories 34`] = `
Object {
  "name": "droid",
  "parentType": "Query",
  "type": "Droid",
}
`;

exports[`graphql-usage reports on files in nested directories 35`] = `
Object {
  "name": "hero",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage reports on files in nested directories 36`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-usage\\\\/tree\\\\/\\.\\*\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-usage reports on files in nested directories 37`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-usage\\\\/tree\\\\/\\.\\*\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-usage reports on files in nested directories 38`] = `
Object {
  "name": "human",
  "parentType": "Query",
  "type": "Human",
}
`;

exports[`graphql-usage reports on files in nested directories 39`] = `
Object {
  "name": "reviews",
  "parentType": "Query",
  "type": "[Review]",
}
`;

exports[`graphql-usage reports on files in nested directories 40`] = `
Object {
  "name": "search",
  "parentType": "Query",
  "type": "[SearchResult]",
}
`;

exports[`graphql-usage reports on files in nested directories 41`] = `
Object {
  "name": "starship",
  "parentType": "Query",
  "type": "Starship",
}
`;

exports[`graphql-usage reports on files in nested directories 42`] = `
Object {
  "name": "Review",
}
`;

exports[`graphql-usage reports on files in nested directories 43`] = `
Object {
  "name": "commentary",
  "parentType": "Review",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 44`] = `
Object {
  "name": "stars",
  "parentType": "Review",
  "type": "Int!",
}
`;

exports[`graphql-usage reports on files in nested directories 45`] = `
Object {
  "name": "Starship",
}
`;

exports[`graphql-usage reports on files in nested directories 46`] = `
Object {
  "name": "coordinates",
  "parentType": "Starship",
  "type": "[[Float!]!]",
}
`;

exports[`graphql-usage reports on files in nested directories 47`] = `
Object {
  "name": "id",
  "parentType": "Starship",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on files in nested directories 48`] = `
Object {
  "name": "length",
  "parentType": "Starship",
  "type": "Float",
}
`;

exports[`graphql-usage reports on files in nested directories 49`] = `
Object {
  "name": "name",
  "parentType": "Starship",
  "type": "String!",
}
`;

exports[`graphql-usage reports on files in nested directories 50`] = `
Object {
  "name": "__Directive",
}
`;

exports[`graphql-usage reports on files in nested directories 51`] = `
Object {
  "name": "args",
  "parentType": "__Directive",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage reports on files in nested directories 52`] = `
Object {
  "name": "description",
  "parentType": "__Directive",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 53`] = `
Object {
  "name": "locations",
  "parentType": "__Directive",
  "type": "[__DirectiveLocation!]!",
}
`;

exports[`graphql-usage reports on files in nested directories 54`] = `
Object {
  "name": "name",
  "parentType": "__Directive",
  "type": "String!",
}
`;

exports[`graphql-usage reports on files in nested directories 55`] = `
Object {
  "name": "__EnumValue",
}
`;

exports[`graphql-usage reports on files in nested directories 56`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 57`] = `
Object {
  "name": "description",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 58`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__EnumValue",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on files in nested directories 59`] = `
Object {
  "name": "name",
  "parentType": "__EnumValue",
  "type": "String!",
}
`;

exports[`graphql-usage reports on files in nested directories 60`] = `
Object {
  "name": "__Field",
}
`;

exports[`graphql-usage reports on files in nested directories 61`] = `
Object {
  "name": "args",
  "parentType": "__Field",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage reports on files in nested directories 62`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 63`] = `
Object {
  "name": "description",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 64`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__Field",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on files in nested directories 65`] = `
Object {
  "name": "name",
  "parentType": "__Field",
  "type": "String!",
}
`;

exports[`graphql-usage reports on files in nested directories 66`] = `
Object {
  "name": "type",
  "parentType": "__Field",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on files in nested directories 67`] = `
Object {
  "name": "__InputValue",
}
`;

exports[`graphql-usage reports on files in nested directories 68`] = `
Object {
  "name": "defaultValue",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 69`] = `
Object {
  "name": "description",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 70`] = `
Object {
  "name": "name",
  "parentType": "__InputValue",
  "type": "String!",
}
`;

exports[`graphql-usage reports on files in nested directories 71`] = `
Object {
  "name": "type",
  "parentType": "__InputValue",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on files in nested directories 72`] = `
Object {
  "name": "__Schema",
}
`;

exports[`graphql-usage reports on files in nested directories 73`] = `
Object {
  "name": "directives",
  "parentType": "__Schema",
  "type": "[__Directive!]!",
}
`;

exports[`graphql-usage reports on files in nested directories 74`] = `
Object {
  "name": "mutationType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on files in nested directories 75`] = `
Object {
  "name": "queryType",
  "parentType": "__Schema",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on files in nested directories 76`] = `
Object {
  "name": "subscriptionType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on files in nested directories 77`] = `
Object {
  "name": "types",
  "parentType": "__Schema",
  "type": "[__Type!]!",
}
`;

exports[`graphql-usage reports on files in nested directories 78`] = `
Object {
  "name": "__Type",
}
`;

exports[`graphql-usage reports on files in nested directories 79`] = `
Object {
  "name": "description",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 80`] = `
Object {
  "name": "enumValues",
  "parentType": "__Type",
  "type": "[__EnumValue!]",
}
`;

exports[`graphql-usage reports on files in nested directories 81`] = `
Object {
  "name": "fields",
  "parentType": "__Type",
  "type": "[__Field!]",
}
`;

exports[`graphql-usage reports on files in nested directories 82`] = `
Object {
  "name": "inputFields",
  "parentType": "__Type",
  "type": "[__InputValue!]",
}
`;

exports[`graphql-usage reports on files in nested directories 83`] = `
Object {
  "name": "interfaces",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage reports on files in nested directories 84`] = `
Object {
  "name": "kind",
  "parentType": "__Type",
  "type": "__TypeKind!",
}
`;

exports[`graphql-usage reports on files in nested directories 85`] = `
Object {
  "name": "name",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage reports on files in nested directories 86`] = `
Object {
  "name": "ofType",
  "parentType": "__Type",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on files in nested directories 87`] = `
Object {
  "name": "possibleTypes",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage reports on jsx files 1`] = `
Object {
  "name": "Droid",
}
`;

exports[`graphql-usage reports on jsx files 2`] = `
Object {
  "name": "appearsIn",
  "parentType": "Droid",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage reports on jsx files 3`] = `
Object {
  "name": "friends",
  "parentType": "Droid",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on jsx files 4`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Droid",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage reports on jsx files 5`] = `
Object {
  "name": "id",
  "parentType": "Droid",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on jsx files 6`] = `
Object {
  "name": "name",
  "parentType": "Droid",
  "type": "String!",
}
`;

exports[`graphql-usage reports on jsx files 7`] = `
Object {
  "name": "primaryFunction",
  "parentType": "Droid",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 8`] = `
Object {
  "name": "FriendsConnection",
}
`;

exports[`graphql-usage reports on jsx files 9`] = `
Object {
  "name": "edges",
  "parentType": "FriendsConnection",
  "type": "[FriendsEdge]",
}
`;

exports[`graphql-usage reports on jsx files 10`] = `
Object {
  "name": "friends",
  "parentType": "FriendsConnection",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on jsx files 11`] = `
Object {
  "name": "pageInfo",
  "parentType": "FriendsConnection",
  "type": "PageInfo!",
}
`;

exports[`graphql-usage reports on jsx files 12`] = `
Object {
  "name": "totalCount",
  "parentType": "FriendsConnection",
  "type": "Int",
}
`;

exports[`graphql-usage reports on jsx files 13`] = `
Object {
  "name": "FriendsEdge",
}
`;

exports[`graphql-usage reports on jsx files 14`] = `
Object {
  "name": "cursor",
  "parentType": "FriendsEdge",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on jsx files 15`] = `
Object {
  "name": "node",
  "parentType": "FriendsEdge",
  "type": "Character",
}
`;

exports[`graphql-usage reports on jsx files 16`] = `
Object {
  "name": "Human",
}
`;

exports[`graphql-usage reports on jsx files 17`] = `
Object {
  "name": "appearsIn",
  "parentType": "Human",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage reports on jsx files 18`] = `
Object {
  "name": "friends",
  "parentType": "Human",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on jsx files 19`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Human",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage reports on jsx files 20`] = `
Object {
  "name": "height",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage reports on jsx files 21`] = `
Object {
  "name": "homePlanet",
  "parentType": "Human",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 22`] = `
Object {
  "name": "id",
  "parentType": "Human",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on jsx files 23`] = `
Object {
  "name": "mass",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage reports on jsx files 24`] = `
Object {
  "name": "name",
  "parentType": "Human",
  "type": "String!",
}
`;

exports[`graphql-usage reports on jsx files 25`] = `
Object {
  "name": "starships",
  "parentType": "Human",
  "type": "[Starship]",
}
`;

exports[`graphql-usage reports on jsx files 26`] = `
Object {
  "name": "Mutation",
}
`;

exports[`graphql-usage reports on jsx files 27`] = `
Object {
  "name": "createReview",
  "parentType": "Mutation",
  "type": "Review",
}
`;

exports[`graphql-usage reports on jsx files 28`] = `
Object {
  "name": "PageInfo",
}
`;

exports[`graphql-usage reports on jsx files 29`] = `
Object {
  "name": "endCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage reports on jsx files 30`] = `
Object {
  "name": "hasNextPage",
  "parentType": "PageInfo",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on jsx files 31`] = `
Object {
  "name": "startCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage reports on jsx files 32`] = `
Object {
  "name": "Query",
}
`;

exports[`graphql-usage reports on jsx files 33`] = `
Object {
  "name": "character",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage reports on jsx files 34`] = `
Object {
  "name": "droid",
  "parentType": "Query",
  "type": "Droid",
}
`;

exports[`graphql-usage reports on jsx files 35`] = `
Object {
  "name": "hero",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage reports on jsx files 36`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-usage\\\\/tree\\\\/\\.\\*\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-usage reports on jsx files 37`] = `
Object {
  "name": "human",
  "parentType": "Query",
  "type": "Human",
}
`;

exports[`graphql-usage reports on jsx files 38`] = `
Object {
  "name": "reviews",
  "parentType": "Query",
  "type": "[Review]",
}
`;

exports[`graphql-usage reports on jsx files 39`] = `
Object {
  "name": "search",
  "parentType": "Query",
  "type": "[SearchResult]",
}
`;

exports[`graphql-usage reports on jsx files 40`] = `
Object {
  "name": "starship",
  "parentType": "Query",
  "type": "Starship",
}
`;

exports[`graphql-usage reports on jsx files 41`] = `
Object {
  "name": "Review",
}
`;

exports[`graphql-usage reports on jsx files 42`] = `
Object {
  "name": "commentary",
  "parentType": "Review",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 43`] = `
Object {
  "name": "stars",
  "parentType": "Review",
  "type": "Int!",
}
`;

exports[`graphql-usage reports on jsx files 44`] = `
Object {
  "name": "Starship",
}
`;

exports[`graphql-usage reports on jsx files 45`] = `
Object {
  "name": "coordinates",
  "parentType": "Starship",
  "type": "[[Float!]!]",
}
`;

exports[`graphql-usage reports on jsx files 46`] = `
Object {
  "name": "id",
  "parentType": "Starship",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on jsx files 47`] = `
Object {
  "name": "length",
  "parentType": "Starship",
  "type": "Float",
}
`;

exports[`graphql-usage reports on jsx files 48`] = `
Object {
  "name": "name",
  "parentType": "Starship",
  "type": "String!",
}
`;

exports[`graphql-usage reports on jsx files 49`] = `
Object {
  "name": "__Directive",
}
`;

exports[`graphql-usage reports on jsx files 50`] = `
Object {
  "name": "args",
  "parentType": "__Directive",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage reports on jsx files 51`] = `
Object {
  "name": "description",
  "parentType": "__Directive",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 52`] = `
Object {
  "name": "locations",
  "parentType": "__Directive",
  "type": "[__DirectiveLocation!]!",
}
`;

exports[`graphql-usage reports on jsx files 53`] = `
Object {
  "name": "name",
  "parentType": "__Directive",
  "type": "String!",
}
`;

exports[`graphql-usage reports on jsx files 54`] = `
Object {
  "name": "__EnumValue",
}
`;

exports[`graphql-usage reports on jsx files 55`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 56`] = `
Object {
  "name": "description",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 57`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__EnumValue",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on jsx files 58`] = `
Object {
  "name": "name",
  "parentType": "__EnumValue",
  "type": "String!",
}
`;

exports[`graphql-usage reports on jsx files 59`] = `
Object {
  "name": "__Field",
}
`;

exports[`graphql-usage reports on jsx files 60`] = `
Object {
  "name": "args",
  "parentType": "__Field",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage reports on jsx files 61`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 62`] = `
Object {
  "name": "description",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 63`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__Field",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on jsx files 64`] = `
Object {
  "name": "name",
  "parentType": "__Field",
  "type": "String!",
}
`;

exports[`graphql-usage reports on jsx files 65`] = `
Object {
  "name": "type",
  "parentType": "__Field",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on jsx files 66`] = `
Object {
  "name": "__InputValue",
}
`;

exports[`graphql-usage reports on jsx files 67`] = `
Object {
  "name": "defaultValue",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 68`] = `
Object {
  "name": "description",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 69`] = `
Object {
  "name": "name",
  "parentType": "__InputValue",
  "type": "String!",
}
`;

exports[`graphql-usage reports on jsx files 70`] = `
Object {
  "name": "type",
  "parentType": "__InputValue",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on jsx files 71`] = `
Object {
  "name": "__Schema",
}
`;

exports[`graphql-usage reports on jsx files 72`] = `
Object {
  "name": "directives",
  "parentType": "__Schema",
  "type": "[__Directive!]!",
}
`;

exports[`graphql-usage reports on jsx files 73`] = `
Object {
  "name": "mutationType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on jsx files 74`] = `
Object {
  "name": "queryType",
  "parentType": "__Schema",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on jsx files 75`] = `
Object {
  "name": "subscriptionType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on jsx files 76`] = `
Object {
  "name": "types",
  "parentType": "__Schema",
  "type": "[__Type!]!",
}
`;

exports[`graphql-usage reports on jsx files 77`] = `
Object {
  "name": "__Type",
}
`;

exports[`graphql-usage reports on jsx files 78`] = `
Object {
  "name": "description",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 79`] = `
Object {
  "name": "enumValues",
  "parentType": "__Type",
  "type": "[__EnumValue!]",
}
`;

exports[`graphql-usage reports on jsx files 80`] = `
Object {
  "name": "fields",
  "parentType": "__Type",
  "type": "[__Field!]",
}
`;

exports[`graphql-usage reports on jsx files 81`] = `
Object {
  "name": "inputFields",
  "parentType": "__Type",
  "type": "[__InputValue!]",
}
`;

exports[`graphql-usage reports on jsx files 82`] = `
Object {
  "name": "interfaces",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage reports on jsx files 83`] = `
Object {
  "name": "kind",
  "parentType": "__Type",
  "type": "__TypeKind!",
}
`;

exports[`graphql-usage reports on jsx files 84`] = `
Object {
  "name": "name",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage reports on jsx files 85`] = `
Object {
  "name": "ofType",
  "parentType": "__Type",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on jsx files 86`] = `
Object {
  "name": "possibleTypes",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage reports on ts files 1`] = `
Object {
  "name": "Droid",
}
`;

exports[`graphql-usage reports on ts files 2`] = `
Object {
  "name": "appearsIn",
  "parentType": "Droid",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage reports on ts files 3`] = `
Object {
  "name": "friends",
  "parentType": "Droid",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on ts files 4`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Droid",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage reports on ts files 5`] = `
Object {
  "name": "id",
  "parentType": "Droid",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on ts files 6`] = `
Object {
  "name": "name",
  "parentType": "Droid",
  "type": "String!",
}
`;

exports[`graphql-usage reports on ts files 7`] = `
Object {
  "name": "primaryFunction",
  "parentType": "Droid",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 8`] = `
Object {
  "name": "FriendsConnection",
}
`;

exports[`graphql-usage reports on ts files 9`] = `
Object {
  "name": "edges",
  "parentType": "FriendsConnection",
  "type": "[FriendsEdge]",
}
`;

exports[`graphql-usage reports on ts files 10`] = `
Object {
  "name": "friends",
  "parentType": "FriendsConnection",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on ts files 11`] = `
Object {
  "name": "pageInfo",
  "parentType": "FriendsConnection",
  "type": "PageInfo!",
}
`;

exports[`graphql-usage reports on ts files 12`] = `
Object {
  "name": "totalCount",
  "parentType": "FriendsConnection",
  "type": "Int",
}
`;

exports[`graphql-usage reports on ts files 13`] = `
Object {
  "name": "FriendsEdge",
}
`;

exports[`graphql-usage reports on ts files 14`] = `
Object {
  "name": "cursor",
  "parentType": "FriendsEdge",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on ts files 15`] = `
Object {
  "name": "node",
  "parentType": "FriendsEdge",
  "type": "Character",
}
`;

exports[`graphql-usage reports on ts files 16`] = `
Object {
  "name": "Human",
}
`;

exports[`graphql-usage reports on ts files 17`] = `
Object {
  "name": "appearsIn",
  "parentType": "Human",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage reports on ts files 18`] = `
Object {
  "name": "friends",
  "parentType": "Human",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on ts files 19`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Human",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage reports on ts files 20`] = `
Object {
  "name": "height",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage reports on ts files 21`] = `
Object {
  "name": "homePlanet",
  "parentType": "Human",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 22`] = `
Object {
  "name": "id",
  "parentType": "Human",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on ts files 23`] = `
Object {
  "name": "mass",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage reports on ts files 24`] = `
Object {
  "name": "name",
  "parentType": "Human",
  "type": "String!",
}
`;

exports[`graphql-usage reports on ts files 25`] = `
Object {
  "name": "starships",
  "parentType": "Human",
  "type": "[Starship]",
}
`;

exports[`graphql-usage reports on ts files 26`] = `
Object {
  "name": "Mutation",
}
`;

exports[`graphql-usage reports on ts files 27`] = `
Object {
  "name": "createReview",
  "parentType": "Mutation",
  "type": "Review",
}
`;

exports[`graphql-usage reports on ts files 28`] = `
Object {
  "name": "PageInfo",
}
`;

exports[`graphql-usage reports on ts files 29`] = `
Object {
  "name": "endCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage reports on ts files 30`] = `
Object {
  "name": "hasNextPage",
  "parentType": "PageInfo",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on ts files 31`] = `
Object {
  "name": "startCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage reports on ts files 32`] = `
Object {
  "name": "Query",
}
`;

exports[`graphql-usage reports on ts files 33`] = `
Object {
  "name": "character",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage reports on ts files 34`] = `
Object {
  "name": "droid",
  "parentType": "Query",
  "type": "Droid",
}
`;

exports[`graphql-usage reports on ts files 35`] = `
Object {
  "name": "hero",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage reports on ts files 36`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-usage\\\\/tree\\\\/\\.\\*\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-usage reports on ts files 37`] = `
Object {
  "name": "human",
  "parentType": "Query",
  "type": "Human",
}
`;

exports[`graphql-usage reports on ts files 38`] = `
Object {
  "name": "reviews",
  "parentType": "Query",
  "type": "[Review]",
}
`;

exports[`graphql-usage reports on ts files 39`] = `
Object {
  "name": "search",
  "parentType": "Query",
  "type": "[SearchResult]",
}
`;

exports[`graphql-usage reports on ts files 40`] = `
Object {
  "name": "starship",
  "parentType": "Query",
  "type": "Starship",
}
`;

exports[`graphql-usage reports on ts files 41`] = `
Object {
  "name": "Review",
}
`;

exports[`graphql-usage reports on ts files 42`] = `
Object {
  "name": "commentary",
  "parentType": "Review",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 43`] = `
Object {
  "name": "stars",
  "parentType": "Review",
  "type": "Int!",
}
`;

exports[`graphql-usage reports on ts files 44`] = `
Object {
  "name": "Starship",
}
`;

exports[`graphql-usage reports on ts files 45`] = `
Object {
  "name": "coordinates",
  "parentType": "Starship",
  "type": "[[Float!]!]",
}
`;

exports[`graphql-usage reports on ts files 46`] = `
Object {
  "name": "id",
  "parentType": "Starship",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on ts files 47`] = `
Object {
  "name": "length",
  "parentType": "Starship",
  "type": "Float",
}
`;

exports[`graphql-usage reports on ts files 48`] = `
Object {
  "name": "name",
  "parentType": "Starship",
  "type": "String!",
}
`;

exports[`graphql-usage reports on ts files 49`] = `
Object {
  "name": "__Directive",
}
`;

exports[`graphql-usage reports on ts files 50`] = `
Object {
  "name": "args",
  "parentType": "__Directive",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage reports on ts files 51`] = `
Object {
  "name": "description",
  "parentType": "__Directive",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 52`] = `
Object {
  "name": "locations",
  "parentType": "__Directive",
  "type": "[__DirectiveLocation!]!",
}
`;

exports[`graphql-usage reports on ts files 53`] = `
Object {
  "name": "name",
  "parentType": "__Directive",
  "type": "String!",
}
`;

exports[`graphql-usage reports on ts files 54`] = `
Object {
  "name": "__EnumValue",
}
`;

exports[`graphql-usage reports on ts files 55`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 56`] = `
Object {
  "name": "description",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 57`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__EnumValue",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on ts files 58`] = `
Object {
  "name": "name",
  "parentType": "__EnumValue",
  "type": "String!",
}
`;

exports[`graphql-usage reports on ts files 59`] = `
Object {
  "name": "__Field",
}
`;

exports[`graphql-usage reports on ts files 60`] = `
Object {
  "name": "args",
  "parentType": "__Field",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage reports on ts files 61`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 62`] = `
Object {
  "name": "description",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 63`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__Field",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on ts files 64`] = `
Object {
  "name": "name",
  "parentType": "__Field",
  "type": "String!",
}
`;

exports[`graphql-usage reports on ts files 65`] = `
Object {
  "name": "type",
  "parentType": "__Field",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on ts files 66`] = `
Object {
  "name": "__InputValue",
}
`;

exports[`graphql-usage reports on ts files 67`] = `
Object {
  "name": "defaultValue",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 68`] = `
Object {
  "name": "description",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 69`] = `
Object {
  "name": "name",
  "parentType": "__InputValue",
  "type": "String!",
}
`;

exports[`graphql-usage reports on ts files 70`] = `
Object {
  "name": "type",
  "parentType": "__InputValue",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on ts files 71`] = `
Object {
  "name": "__Schema",
}
`;

exports[`graphql-usage reports on ts files 72`] = `
Object {
  "name": "directives",
  "parentType": "__Schema",
  "type": "[__Directive!]!",
}
`;

exports[`graphql-usage reports on ts files 73`] = `
Object {
  "name": "mutationType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on ts files 74`] = `
Object {
  "name": "queryType",
  "parentType": "__Schema",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on ts files 75`] = `
Object {
  "name": "subscriptionType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on ts files 76`] = `
Object {
  "name": "types",
  "parentType": "__Schema",
  "type": "[__Type!]!",
}
`;

exports[`graphql-usage reports on ts files 77`] = `
Object {
  "name": "__Type",
}
`;

exports[`graphql-usage reports on ts files 78`] = `
Object {
  "name": "description",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 79`] = `
Object {
  "name": "enumValues",
  "parentType": "__Type",
  "type": "[__EnumValue!]",
}
`;

exports[`graphql-usage reports on ts files 80`] = `
Object {
  "name": "fields",
  "parentType": "__Type",
  "type": "[__Field!]",
}
`;

exports[`graphql-usage reports on ts files 81`] = `
Object {
  "name": "inputFields",
  "parentType": "__Type",
  "type": "[__InputValue!]",
}
`;

exports[`graphql-usage reports on ts files 82`] = `
Object {
  "name": "interfaces",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage reports on ts files 83`] = `
Object {
  "name": "kind",
  "parentType": "__Type",
  "type": "__TypeKind!",
}
`;

exports[`graphql-usage reports on ts files 84`] = `
Object {
  "name": "name",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage reports on ts files 85`] = `
Object {
  "name": "ofType",
  "parentType": "__Type",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on ts files 86`] = `
Object {
  "name": "possibleTypes",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage reports on tsx files 1`] = `
Object {
  "name": "Droid",
}
`;

exports[`graphql-usage reports on tsx files 2`] = `
Object {
  "name": "appearsIn",
  "parentType": "Droid",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage reports on tsx files 3`] = `
Object {
  "name": "friends",
  "parentType": "Droid",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on tsx files 4`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Droid",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage reports on tsx files 5`] = `
Object {
  "name": "id",
  "parentType": "Droid",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on tsx files 6`] = `
Object {
  "name": "name",
  "parentType": "Droid",
  "type": "String!",
}
`;

exports[`graphql-usage reports on tsx files 7`] = `
Object {
  "name": "primaryFunction",
  "parentType": "Droid",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 8`] = `
Object {
  "name": "FriendsConnection",
}
`;

exports[`graphql-usage reports on tsx files 9`] = `
Object {
  "name": "edges",
  "parentType": "FriendsConnection",
  "type": "[FriendsEdge]",
}
`;

exports[`graphql-usage reports on tsx files 10`] = `
Object {
  "name": "friends",
  "parentType": "FriendsConnection",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on tsx files 11`] = `
Object {
  "name": "pageInfo",
  "parentType": "FriendsConnection",
  "type": "PageInfo!",
}
`;

exports[`graphql-usage reports on tsx files 12`] = `
Object {
  "name": "totalCount",
  "parentType": "FriendsConnection",
  "type": "Int",
}
`;

exports[`graphql-usage reports on tsx files 13`] = `
Object {
  "name": "FriendsEdge",
}
`;

exports[`graphql-usage reports on tsx files 14`] = `
Object {
  "name": "cursor",
  "parentType": "FriendsEdge",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on tsx files 15`] = `
Object {
  "name": "node",
  "parentType": "FriendsEdge",
  "type": "Character",
}
`;

exports[`graphql-usage reports on tsx files 16`] = `
Object {
  "name": "Human",
}
`;

exports[`graphql-usage reports on tsx files 17`] = `
Object {
  "name": "appearsIn",
  "parentType": "Human",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage reports on tsx files 18`] = `
Object {
  "name": "friends",
  "parentType": "Human",
  "type": "[Character]",
}
`;

exports[`graphql-usage reports on tsx files 19`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Human",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage reports on tsx files 20`] = `
Object {
  "name": "height",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage reports on tsx files 21`] = `
Object {
  "name": "homePlanet",
  "parentType": "Human",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 22`] = `
Object {
  "name": "id",
  "parentType": "Human",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on tsx files 23`] = `
Object {
  "name": "mass",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage reports on tsx files 24`] = `
Object {
  "name": "name",
  "parentType": "Human",
  "type": "String!",
}
`;

exports[`graphql-usage reports on tsx files 25`] = `
Object {
  "name": "starships",
  "parentType": "Human",
  "type": "[Starship]",
}
`;

exports[`graphql-usage reports on tsx files 26`] = `
Object {
  "name": "Mutation",
}
`;

exports[`graphql-usage reports on tsx files 27`] = `
Object {
  "name": "createReview",
  "parentType": "Mutation",
  "type": "Review",
}
`;

exports[`graphql-usage reports on tsx files 28`] = `
Object {
  "name": "PageInfo",
}
`;

exports[`graphql-usage reports on tsx files 29`] = `
Object {
  "name": "endCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage reports on tsx files 30`] = `
Object {
  "name": "hasNextPage",
  "parentType": "PageInfo",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on tsx files 31`] = `
Object {
  "name": "startCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage reports on tsx files 32`] = `
Object {
  "name": "Query",
}
`;

exports[`graphql-usage reports on tsx files 33`] = `
Object {
  "name": "character",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage reports on tsx files 34`] = `
Object {
  "name": "droid",
  "parentType": "Query",
  "type": "Droid",
}
`;

exports[`graphql-usage reports on tsx files 35`] = `
Object {
  "name": "hero",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage reports on tsx files 36`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-usage\\\\/tree\\\\/\\.\\*\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-usage reports on tsx files 37`] = `
Object {
  "name": "human",
  "parentType": "Query",
  "type": "Human",
}
`;

exports[`graphql-usage reports on tsx files 38`] = `
Object {
  "name": "reviews",
  "parentType": "Query",
  "type": "[Review]",
}
`;

exports[`graphql-usage reports on tsx files 39`] = `
Object {
  "name": "search",
  "parentType": "Query",
  "type": "[SearchResult]",
}
`;

exports[`graphql-usage reports on tsx files 40`] = `
Object {
  "name": "starship",
  "parentType": "Query",
  "type": "Starship",
}
`;

exports[`graphql-usage reports on tsx files 41`] = `
Object {
  "name": "Review",
}
`;

exports[`graphql-usage reports on tsx files 42`] = `
Object {
  "name": "commentary",
  "parentType": "Review",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 43`] = `
Object {
  "name": "stars",
  "parentType": "Review",
  "type": "Int!",
}
`;

exports[`graphql-usage reports on tsx files 44`] = `
Object {
  "name": "Starship",
}
`;

exports[`graphql-usage reports on tsx files 45`] = `
Object {
  "name": "coordinates",
  "parentType": "Starship",
  "type": "[[Float!]!]",
}
`;

exports[`graphql-usage reports on tsx files 46`] = `
Object {
  "name": "id",
  "parentType": "Starship",
  "type": "ID!",
}
`;

exports[`graphql-usage reports on tsx files 47`] = `
Object {
  "name": "length",
  "parentType": "Starship",
  "type": "Float",
}
`;

exports[`graphql-usage reports on tsx files 48`] = `
Object {
  "name": "name",
  "parentType": "Starship",
  "type": "String!",
}
`;

exports[`graphql-usage reports on tsx files 49`] = `
Object {
  "name": "__Directive",
}
`;

exports[`graphql-usage reports on tsx files 50`] = `
Object {
  "name": "args",
  "parentType": "__Directive",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage reports on tsx files 51`] = `
Object {
  "name": "description",
  "parentType": "__Directive",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 52`] = `
Object {
  "name": "locations",
  "parentType": "__Directive",
  "type": "[__DirectiveLocation!]!",
}
`;

exports[`graphql-usage reports on tsx files 53`] = `
Object {
  "name": "name",
  "parentType": "__Directive",
  "type": "String!",
}
`;

exports[`graphql-usage reports on tsx files 54`] = `
Object {
  "name": "__EnumValue",
}
`;

exports[`graphql-usage reports on tsx files 55`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 56`] = `
Object {
  "name": "description",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 57`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__EnumValue",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on tsx files 58`] = `
Object {
  "name": "name",
  "parentType": "__EnumValue",
  "type": "String!",
}
`;

exports[`graphql-usage reports on tsx files 59`] = `
Object {
  "name": "__Field",
}
`;

exports[`graphql-usage reports on tsx files 60`] = `
Object {
  "name": "args",
  "parentType": "__Field",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage reports on tsx files 61`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 62`] = `
Object {
  "name": "description",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 63`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__Field",
  "type": "Boolean!",
}
`;

exports[`graphql-usage reports on tsx files 64`] = `
Object {
  "name": "name",
  "parentType": "__Field",
  "type": "String!",
}
`;

exports[`graphql-usage reports on tsx files 65`] = `
Object {
  "name": "type",
  "parentType": "__Field",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on tsx files 66`] = `
Object {
  "name": "__InputValue",
}
`;

exports[`graphql-usage reports on tsx files 67`] = `
Object {
  "name": "defaultValue",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 68`] = `
Object {
  "name": "description",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 69`] = `
Object {
  "name": "name",
  "parentType": "__InputValue",
  "type": "String!",
}
`;

exports[`graphql-usage reports on tsx files 70`] = `
Object {
  "name": "type",
  "parentType": "__InputValue",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on tsx files 71`] = `
Object {
  "name": "__Schema",
}
`;

exports[`graphql-usage reports on tsx files 72`] = `
Object {
  "name": "directives",
  "parentType": "__Schema",
  "type": "[__Directive!]!",
}
`;

exports[`graphql-usage reports on tsx files 73`] = `
Object {
  "name": "mutationType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on tsx files 74`] = `
Object {
  "name": "queryType",
  "parentType": "__Schema",
  "type": "__Type!",
}
`;

exports[`graphql-usage reports on tsx files 75`] = `
Object {
  "name": "subscriptionType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on tsx files 76`] = `
Object {
  "name": "types",
  "parentType": "__Schema",
  "type": "[__Type!]!",
}
`;

exports[`graphql-usage reports on tsx files 77`] = `
Object {
  "name": "__Type",
}
`;

exports[`graphql-usage reports on tsx files 78`] = `
Object {
  "name": "description",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 79`] = `
Object {
  "name": "enumValues",
  "parentType": "__Type",
  "type": "[__EnumValue!]",
}
`;

exports[`graphql-usage reports on tsx files 80`] = `
Object {
  "name": "fields",
  "parentType": "__Type",
  "type": "[__Field!]",
}
`;

exports[`graphql-usage reports on tsx files 81`] = `
Object {
  "name": "inputFields",
  "parentType": "__Type",
  "type": "[__InputValue!]",
}
`;

exports[`graphql-usage reports on tsx files 82`] = `
Object {
  "name": "interfaces",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage reports on tsx files 83`] = `
Object {
  "name": "kind",
  "parentType": "__Type",
  "type": "__TypeKind!",
}
`;

exports[`graphql-usage reports on tsx files 84`] = `
Object {
  "name": "name",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage reports on tsx files 85`] = `
Object {
  "name": "ofType",
  "parentType": "__Type",
  "type": "__Type",
}
`;

exports[`graphql-usage reports on tsx files 86`] = `
Object {
  "name": "possibleTypes",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 1`] = `
Object {
  "name": "Droid",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 2`] = `
Object {
  "name": "appearsIn",
  "parentType": "Droid",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 3`] = `
Object {
  "name": "friends",
  "parentType": "Droid",
  "type": "[Character]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 4`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Droid",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 5`] = `
Object {
  "name": "id",
  "parentType": "Droid",
  "type": "ID!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 6`] = `
Object {
  "name": "name",
  "parentType": "Droid",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 7`] = `
Object {
  "name": "primaryFunction",
  "parentType": "Droid",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 8`] = `
Object {
  "name": "FriendsConnection",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 9`] = `
Object {
  "name": "edges",
  "parentType": "FriendsConnection",
  "type": "[FriendsEdge]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 10`] = `
Object {
  "name": "friends",
  "parentType": "FriendsConnection",
  "type": "[Character]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 11`] = `
Object {
  "name": "pageInfo",
  "parentType": "FriendsConnection",
  "type": "PageInfo!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 12`] = `
Object {
  "name": "totalCount",
  "parentType": "FriendsConnection",
  "type": "Int",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 13`] = `
Object {
  "name": "FriendsEdge",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 14`] = `
Object {
  "name": "cursor",
  "parentType": "FriendsEdge",
  "type": "ID!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 15`] = `
Object {
  "name": "node",
  "parentType": "FriendsEdge",
  "type": "Character",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 16`] = `
Object {
  "name": "Human",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 17`] = `
Object {
  "name": "appearsIn",
  "parentType": "Human",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 18`] = `
Object {
  "name": "friends",
  "parentType": "Human",
  "type": "[Character]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 19`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Human",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 20`] = `
Object {
  "name": "height",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 21`] = `
Object {
  "name": "homePlanet",
  "parentType": "Human",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 22`] = `
Object {
  "name": "id",
  "parentType": "Human",
  "type": "ID!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 23`] = `
Object {
  "name": "mass",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 24`] = `
Object {
  "name": "name",
  "parentType": "Human",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 25`] = `
Object {
  "name": "starships",
  "parentType": "Human",
  "type": "[Starship]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 26`] = `
Object {
  "name": "Mutation",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 27`] = `
Object {
  "name": "createReview",
  "parentType": "Mutation",
  "type": "Review",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 28`] = `
Object {
  "name": "PageInfo",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 29`] = `
Object {
  "name": "endCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 30`] = `
Object {
  "name": "hasNextPage",
  "parentType": "PageInfo",
  "type": "Boolean!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 31`] = `
Object {
  "name": "startCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 32`] = `
Object {
  "name": "Query",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 33`] = `
Object {
  "name": "character",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 34`] = `
Object {
  "name": "droid",
  "parentType": "Query",
  "type": "Droid",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 35`] = `
Object {
  "name": "hero",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 36`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-usage\\\\/tree\\\\/\\.\\*\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 37`] = `
Object {
  "name": "human",
  "parentType": "Query",
  "type": "Human",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 38`] = `
Object {
  "name": "reviews",
  "parentType": "Query",
  "type": "[Review]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 39`] = `
Object {
  "name": "search",
  "parentType": "Query",
  "type": "[SearchResult]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 40`] = `
Object {
  "name": "starship",
  "parentType": "Query",
  "type": "Starship",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 41`] = `
Object {
  "name": "Review",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 42`] = `
Object {
  "name": "commentary",
  "parentType": "Review",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 43`] = `
Object {
  "name": "stars",
  "parentType": "Review",
  "type": "Int!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 44`] = `
Object {
  "name": "Starship",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 45`] = `
Object {
  "name": "coordinates",
  "parentType": "Starship",
  "type": "[[Float!]!]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 46`] = `
Object {
  "name": "id",
  "parentType": "Starship",
  "type": "ID!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 47`] = `
Object {
  "name": "length",
  "parentType": "Starship",
  "type": "Float",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 48`] = `
Object {
  "name": "name",
  "parentType": "Starship",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 49`] = `
Object {
  "name": "__Directive",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 50`] = `
Object {
  "name": "args",
  "parentType": "__Directive",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 51`] = `
Object {
  "name": "description",
  "parentType": "__Directive",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 52`] = `
Object {
  "name": "locations",
  "parentType": "__Directive",
  "type": "[__DirectiveLocation!]!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 53`] = `
Object {
  "name": "name",
  "parentType": "__Directive",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 54`] = `
Object {
  "name": "__EnumValue",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 55`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 56`] = `
Object {
  "name": "description",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 57`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__EnumValue",
  "type": "Boolean!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 58`] = `
Object {
  "name": "name",
  "parentType": "__EnumValue",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 59`] = `
Object {
  "name": "__Field",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 60`] = `
Object {
  "name": "args",
  "parentType": "__Field",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 61`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 62`] = `
Object {
  "name": "description",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 63`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__Field",
  "type": "Boolean!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 64`] = `
Object {
  "name": "name",
  "parentType": "__Field",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 65`] = `
Object {
  "name": "type",
  "parentType": "__Field",
  "type": "__Type!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 66`] = `
Object {
  "name": "__InputValue",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 67`] = `
Object {
  "name": "defaultValue",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 68`] = `
Object {
  "name": "description",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 69`] = `
Object {
  "name": "name",
  "parentType": "__InputValue",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 70`] = `
Object {
  "name": "type",
  "parentType": "__InputValue",
  "type": "__Type!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 71`] = `
Object {
  "name": "__Schema",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 72`] = `
Object {
  "name": "directives",
  "parentType": "__Schema",
  "type": "[__Directive!]!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 73`] = `
Object {
  "name": "mutationType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 74`] = `
Object {
  "name": "queryType",
  "parentType": "__Schema",
  "type": "__Type!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 75`] = `
Object {
  "name": "subscriptionType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 76`] = `
Object {
  "name": "types",
  "parentType": "__Schema",
  "type": "[__Type!]!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 77`] = `
Object {
  "name": "__Type",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 78`] = `
Object {
  "name": "description",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 79`] = `
Object {
  "name": "enumValues",
  "parentType": "__Type",
  "type": "[__EnumValue!]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 80`] = `
Object {
  "name": "fields",
  "parentType": "__Type",
  "type": "[__Field!]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 81`] = `
Object {
  "name": "inputFields",
  "parentType": "__Type",
  "type": "[__InputValue!]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 82`] = `
Object {
  "name": "interfaces",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 83`] = `
Object {
  "name": "kind",
  "parentType": "__Type",
  "type": "__TypeKind!",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 84`] = `
Object {
  "name": "name",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 85`] = `
Object {
  "name": "ofType",
  "parentType": "__Type",
  "type": "__Type",
}
`;

exports[`graphql-usage writes a file given a .graphql GraphQL schema 86`] = `
Object {
  "name": "possibleTypes",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 1`] = `
Object {
  "name": "Droid",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 2`] = `
Object {
  "name": "appearsIn",
  "parentType": "Droid",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 3`] = `
Object {
  "name": "friends",
  "parentType": "Droid",
  "type": "[Character]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 4`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Droid",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 5`] = `
Object {
  "name": "id",
  "parentType": "Droid",
  "type": "ID!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 6`] = `
Object {
  "name": "name",
  "parentType": "Droid",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 7`] = `
Object {
  "name": "primaryFunction",
  "parentType": "Droid",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 8`] = `
Object {
  "name": "FriendsConnection",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 9`] = `
Object {
  "name": "edges",
  "parentType": "FriendsConnection",
  "type": "[FriendsEdge]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 10`] = `
Object {
  "name": "friends",
  "parentType": "FriendsConnection",
  "type": "[Character]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 11`] = `
Object {
  "name": "pageInfo",
  "parentType": "FriendsConnection",
  "type": "PageInfo!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 12`] = `
Object {
  "name": "totalCount",
  "parentType": "FriendsConnection",
  "type": "Int",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 13`] = `
Object {
  "name": "FriendsEdge",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 14`] = `
Object {
  "name": "cursor",
  "parentType": "FriendsEdge",
  "type": "ID!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 15`] = `
Object {
  "name": "node",
  "parentType": "FriendsEdge",
  "type": "Character",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 16`] = `
Object {
  "name": "Human",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 17`] = `
Object {
  "name": "appearsIn",
  "parentType": "Human",
  "type": "[Episode]!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 18`] = `
Object {
  "name": "friends",
  "parentType": "Human",
  "type": "[Character]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 19`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Human",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 20`] = `
Object {
  "name": "height",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 21`] = `
Object {
  "name": "homePlanet",
  "parentType": "Human",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 22`] = `
Object {
  "name": "id",
  "parentType": "Human",
  "type": "ID!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 23`] = `
Object {
  "name": "mass",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 24`] = `
Object {
  "name": "name",
  "parentType": "Human",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 25`] = `
Object {
  "name": "starships",
  "parentType": "Human",
  "type": "[Starship]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 26`] = `
Object {
  "name": "Mutation",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 27`] = `
Object {
  "name": "createReview",
  "parentType": "Mutation",
  "type": "Review",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 28`] = `
Object {
  "name": "PageInfo",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 29`] = `
Object {
  "name": "endCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 30`] = `
Object {
  "name": "hasNextPage",
  "parentType": "PageInfo",
  "type": "Boolean!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 31`] = `
Object {
  "name": "startCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 32`] = `
Object {
  "name": "Query",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 33`] = `
Object {
  "name": "character",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 34`] = `
Object {
  "name": "droid",
  "parentType": "Query",
  "type": "Droid",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 35`] = `
Object {
  "name": "hero",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 36`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-usage\\\\/tree\\\\/\\.\\*\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 37`] = `
Object {
  "name": "human",
  "parentType": "Query",
  "type": "Human",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 38`] = `
Object {
  "name": "reviews",
  "parentType": "Query",
  "type": "[Review]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 39`] = `
Object {
  "name": "search",
  "parentType": "Query",
  "type": "[SearchResult]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 40`] = `
Object {
  "name": "starship",
  "parentType": "Query",
  "type": "Starship",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 41`] = `
Object {
  "name": "Review",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 42`] = `
Object {
  "name": "commentary",
  "parentType": "Review",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 43`] = `
Object {
  "name": "stars",
  "parentType": "Review",
  "type": "Int!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 44`] = `
Object {
  "name": "Starship",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 45`] = `
Object {
  "name": "coordinates",
  "parentType": "Starship",
  "type": "[[Float!]!]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 46`] = `
Object {
  "name": "id",
  "parentType": "Starship",
  "type": "ID!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 47`] = `
Object {
  "name": "length",
  "parentType": "Starship",
  "type": "Float",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 48`] = `
Object {
  "name": "name",
  "parentType": "Starship",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 49`] = `
Object {
  "name": "__Directive",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 50`] = `
Object {
  "name": "args",
  "parentType": "__Directive",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 51`] = `
Object {
  "name": "description",
  "parentType": "__Directive",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 52`] = `
Object {
  "name": "locations",
  "parentType": "__Directive",
  "type": "[__DirectiveLocation!]!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 53`] = `
Object {
  "name": "name",
  "parentType": "__Directive",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 54`] = `
Object {
  "name": "__EnumValue",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 55`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 56`] = `
Object {
  "name": "description",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 57`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__EnumValue",
  "type": "Boolean!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 58`] = `
Object {
  "name": "name",
  "parentType": "__EnumValue",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 59`] = `
Object {
  "name": "__Field",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 60`] = `
Object {
  "name": "args",
  "parentType": "__Field",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 61`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 62`] = `
Object {
  "name": "description",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 63`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__Field",
  "type": "Boolean!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 64`] = `
Object {
  "name": "name",
  "parentType": "__Field",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 65`] = `
Object {
  "name": "type",
  "parentType": "__Field",
  "type": "__Type!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 66`] = `
Object {
  "name": "__InputValue",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 67`] = `
Object {
  "name": "defaultValue",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 68`] = `
Object {
  "name": "description",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 69`] = `
Object {
  "name": "name",
  "parentType": "__InputValue",
  "type": "String!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 70`] = `
Object {
  "name": "type",
  "parentType": "__InputValue",
  "type": "__Type!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 71`] = `
Object {
  "name": "__Schema",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 72`] = `
Object {
  "name": "directives",
  "parentType": "__Schema",
  "type": "[__Directive!]!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 73`] = `
Object {
  "name": "mutationType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 74`] = `
Object {
  "name": "queryType",
  "parentType": "__Schema",
  "type": "__Type!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 75`] = `
Object {
  "name": "subscriptionType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 76`] = `
Object {
  "name": "types",
  "parentType": "__Schema",
  "type": "[__Type!]!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 77`] = `
Object {
  "name": "__Type",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 78`] = `
Object {
  "name": "description",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 79`] = `
Object {
  "name": "enumValues",
  "parentType": "__Type",
  "type": "[__EnumValue!]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 80`] = `
Object {
  "name": "fields",
  "parentType": "__Type",
  "type": "[__Field!]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 81`] = `
Object {
  "name": "inputFields",
  "parentType": "__Type",
  "type": "[__InputValue!]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 82`] = `
Object {
  "name": "interfaces",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 83`] = `
Object {
  "name": "kind",
  "parentType": "__Type",
  "type": "__TypeKind!",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 84`] = `
Object {
  "name": "name",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 85`] = `
Object {
  "name": "ofType",
  "parentType": "__Type",
  "type": "__Type",
}
`;

exports[`graphql-usage writes a file given a .json GraphQL schema 86`] = `
Object {
  "name": "possibleTypes",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;
